Integrate payments: backend sync/confirm + frontend Stripe checkout
- Backend (order/payment):
OrderService: persist richer payment details, return paymentDetails in place-order response, handle payment failures by releasing reservations, add confirmOrderPayment to sync payment status and update order state.
PaymentService (backend): change createPayment to return PaymentResponse, add syncPayment, and add confirmPayment (client-driven confirmation) to update persisted payment status.
InventoryService: add logging and confirmReservation to finalize stock after payment.
Add CreatePaymentResponse and ConfirmStockRequest DTOs/records.

Adjusted application.yml (order service ddl-auto -> create-drop) and payment service config cleanup.
- Frontend
Add @stripe/stripe-js dependency and environment stripe key.
Checkout: load Stripe, mount card element, handle client-secret, confirm card payment, call order confirm endpoint or payment sync; store payment/order ids returned by API.
Order service and payment service: support paged requests, confirm/sync payment endpoints, and updated models to include paymentDetails/orderStatus.
Add detailed order-details page and various improvements to orders, checkout, cart, product-list, admin layout (Keycloak name/email), and other UI fixes (routerLinks, template fixes, currency/formatting).
Added helper methods (books.getBooksByIds, cart.getCartById, cart.markCartAsCompleted) and updated models to carry payment info and order status.
Routing and auth guard updates: route role values normalized to ADMIN/USER, fixed guard logic.

- MISC
package.json/package-lock updated to include Stripe dependency and other lockfile edits.
Numerous template/formatting fixes and UI polish (loading states, empty states, pagination UI).